--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-logger": "^3.0.13"
+    "@types/redux-logger": "^3.0.13",
+    "@types/uuid": "^9.0.8"
   }
 }
