--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
