--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.25",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "immutability-helper": "^3.1.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
