--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@types/redux-logger": "^3.0.13",
     "@types/uuid": "^9.0.8",
+    "cypress": "^13.13.0",
     "fetch-mock": "^10.0.7",
     "jest": "^27.5.1",
     "redux-mock-store": "^1.5.4"
